# Paper-search

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  EXPERIMENTS.md  ORIGIN.md  PROJECT.md  README.md  pyproject.toml
benchmarks/: chunking_baseline.csv
my_agent_project/: __init__.py  agent_service.py  config.py  db.py  download_service.py  evaluation_service.py  main.py  model_service.py  origin_service.py  pdf_service.py  rag_service.py  schemas.py  search_service.py
my_agent_project/static/: evaluation_poll.js  status_poll.js  styles.css
my_agent_project/templates/: base.html  evaluation.html  index.html  origin.html  paper_detail.html  papers.html  results.html  table.html
tests/: test_services.py
